# hacky-news

./: .gitignore  Dockerfile  README.md  classifier.py  create_venv.sh  docker-compose.yml  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  wsgi.py
.github/workflows/: codacy.yml
app/: __init__.py
app/api/: routes.py
app/config/: settings.py
app/models/: database.py
app/services/: classifier.py
static/css/: styles.css
static/js/: main.js
templates/: index.html
tests/: test_api.py
